[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/World/Ground.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Level/LevelTemplate.gd" type="Script" id=2]
[ext_resource path="res://Scenes/World/Elevator.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Environement/arch.png" type="Texture" id=7]
[ext_resource path="res://Assets/Environement/broken_arch.png" type="Texture" id=8]
[ext_resource path="res://Assets/World/end_level.png" type="Texture" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 17, 44.5 )

[node name="Level0" type="Node2D"]
script = ExtResource( 2 )
reset_when_died = true

[node name="Ground" parent="." instance=ExtResource( 1 )]
position = Vector2( 512, 568 )
scale = Vector2( 20, 1 )
_scale = Vector2( 20, 1 )

[node name="SpawnPoint" type="Node2D" parent="."]
position = Vector2( 67.8265, 416.611 )

[node name="NodeElevator" parent="." instance=ExtResource( 3 )]
position = Vector2( -1000, 300 )
scale = Vector2( 20, 12 )
move_to = Vector2( 3000, 0 )
speed = 13
_scale = Vector2( 20, 12 )

[node name="AreaEnd" type="Area2D" parent="."]
position = Vector2( 1000, 496 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaEnd"]
position = Vector2( 8, -3.5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="AreaEnd"]
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 9 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="elements" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 2048, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/elements"]
position = Vector2( 800, 400 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 7 )

[node name="Sprite2" type="Sprite" parent="ParallaxBackground/elements"]
position = Vector2( 570, 400 )
scale = Vector2( -0.3, 0.3 )
texture = ExtResource( 8 )

[node name="Sprite3" type="Sprite" parent="ParallaxBackground/elements"]
position = Vector2( 1010, 400 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 8 )
[connection signal="body_entered" from="AreaEnd" to="." method="_on_AreaEnd_body_entered"]
